# controllers/categoryController.js
@@ -28,7 +28,7 @@ exports.getCategoryById = async (req, res) => {
     const { id } = req.params;
 
     try {
-        const category = await Category.findById(id);
+        const category = await Category.findOne({categoryId:id});
         if (!category) return res.status(404).json({ message: 'Category not found' });
         res.json(category);
     } catch (err) {
@@ -41,8 +41,8 @@ exports.updateCategory = async (req, res) => {
     const { id } = req.params;
 
     try {
-        const updatedCategory = await Category.findByIdAndUpdate(id, req.body, { new: true });
-        if (!updatedCategory) return res.status(404).json({ message: 'Category not found' });
+        const updatedCategory = await Category.updateOne({categoryId:id},{$set: req.body}, { new: true });
+        if (updatedCategory.matchedCount==0) return res.status(404).json({ message: 'Category not found' });
         res.json({ message: 'Category updated successfully', updatedCategory });
     } catch (err) {
         res.status(400).json({ message: 'Error updating category', error: err.message });
@@ -55,8 +55,8 @@ exports.deleteCategory = async (req, res) => {
     const { id } = req.params;
 
     try {
-        const deletedCategory = await Category.findByIdAndDelete(id);
-        if (!deletedCategory) return res.status(404).json({ message: 'Category not found' });
+        const deletedCategory = await Category.deleteOne({categoryId:id});
+        if (deletedCategory.deletedCount==0) return res.status(404).json({ message: 'Category not found' });
         res.json({ message: 'Category deleted successfully' });
     } catch (err) {
         res.status(500).json({ message: 'Server error', error: err.message });
